samples/_failures_safe/1761127566_1ec21e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_261e267d.c: In function ‘main’:
./samples/SAFE/__tmp_261e267d.c:154:31: error: missing terminating " character
  154 |             a.rows = read_int("Enter rows for matrix A (1-
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_261e267d.c:154:13: error: expected expression at end of input
  154 |             a.rows = read_int("Enter rows for matrix A (1-
      |             ^
./samples/SAFE/__tmp_261e267d.c:154:22: error: too few arguments to function ‘read_int’
  154 |             a.rows = read_int("Enter rows for matrix A (1-
      |                      ^~~~~~~~
./samples/SAFE/__tmp_261e267d.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_261e267d.c:154:13: error: expected declaration or statement at end of input
  154 |             a.rows = read_int("Enter rows for matrix A (1-
      |             ^
./samples/SAFE/__tmp_261e267d.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_261e267d.c:154:13: error: expected declaration or statement at end of input
